test/invalid/baseline/enum-empty.txt
Syntax error at line 1 in enum-empty.widl, since `enum Empty`:
enum Empty {};
             ^ No value in enum
